--- a/index.html
+++ b/index.html
@@ -172,13 +172,18 @@
                 <section class="about sect">
                     <h2 class="right-title">About Me</h2>
                     <p class="para">
-                        Highly skilled mechanical engineer with 2 years of working
+                    <!--    Highly skilled mechanical engineer with 2 years of working
                         experience in polycarbonate sheet plant,vast knowledge of production
                         and manufacturing technologies ,proficiency in ms office with
                         advance excel sheet. I believe that knowledge should not be limited to
                         just one field. In the era of fourth industrial revolution everything is
                         getting degitalized and automated here so it is also very important for
-                        us to have knowledge of advance technologies..
+                        us to have knowledge of advance technologies..  -->
+                         My name is Harish Mahor, and I am a multi-talented professional with diverse experience in Polycarbonate Sheet Plant as a Mechanical engineer.
+As a 2 years experienced mechanical engineer, I have worked on a range of challenging projects in Polycarbonate sheet plant related to Sheet dimensions and profiles. I have a strong background in Blow Molding ,Plastic Extrusion ,Injection Moulding ,AutoCAD ,Solid Works ,Management ,MS Excel which have enabled me to design, analyze, and implement innovative solutions to complex engineering problems. I have also worked in a polycarbonate sheet plant as a mechanical engineer, where I was responsible for Production ,maintenance and Material Management.
+Recently, I have completed Training in Full-stack web development and in Data analysis. I am excited to leverage my skills and creativity in these fields. I am well-versed in Html,CSS ,Bootstrape ,Javascript ,react JS,nodejs ,Express JS ,Mongodb ,Sql ,Data Structure and Algorithms in JAVA ,adobe Photoshop ,Adobe XD,Adobe illustrator,Power BI ,Tableau,Advance Excel,Data analysis thorough python using NumPy panda matplotlib,seaborn and have worked on Portfolio website,Responsive Resume,Flipkart clone,Mern stack pizza delivery app which have given me hands-on experience in developing and deploying web applications and analyzing data.
+Apart from my professional work, I am also an aspirant of UPSC (Union Public Service Commission) and working hard to crack it. I believe in continuous learning and personal development, which has led me to pursue diverse interests and excel in different fields.
+I am passionate about using my skills and expertise to make a positive impact in the world. I am excited to connect with other professionals and potential collaborators through LinkedIn. Please feel free to reach out if you would like to discuss a project, job opportunity, or anything related to our shared interests. Thank you for visiting my profile!
                     </p>
                 </section>
 
@@ -195,7 +200,7 @@
                             <div class="tl-content">
                                 <h5 class="tl-title-2"> Mechanical engineer</h5>
                                 <p class="para">
-                                    
+                                    I worked as a Production Engineer, and my primary responsibilities were to manage and supervise labor, ensure smooth production operations, and perform maintenance tasks such as changing calender rolls, dies, and analyzing mechanical faults to correct them.
                                 </p>
                             </div>
                         </div>
@@ -209,7 +214,8 @@
                             <div class="tl-content">
                                 <h5 class="tl-title-2">production trainee</h5>
                                 <p class="para">
-                                i worked here as a production trainee in formulation..
+                               
+I have gained knowledge about pesticides and various formulation processes, including the chemicals used in pesticide formulation and different methods of producing pesticides, such as suspension concentration, liquid, powder, WDG, etc.
                                 </p>
                             </div>
                         </div>
@@ -260,11 +266,9 @@
                         <div class="right-tl-content">
                             <div class="tl-content">
                                 <h5 class="tl-title-2">Master of technology</h5>
-                                <!-- <p class="para">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate vitae 
-                                    voluptatem deleniti, 
-                                    laboriosam odio nobis quae fugit facilis quo.
-                                </p> -->
+                                 <p class="para">
+                                   Currently, I am pursuing my M.Tech in Heat Power and Thermal Engineering from TIT Science, Bhopal. I am in the final semester and working on my thesis to complete my M.Tech degree.
+                                </p> 
                                 Heat Power and Thermal
                             </div>
                         </div>
@@ -281,7 +285,7 @@
                                     <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate vitae 
                                     voluptatem deleniti, 
                                     laboriosam odio nobis quae fugit facilis quo. -->
-                                   currently i am learning full stack web development from Newton school
+                               I enrolled in Newton School, an online coding school, in March 2022 to learn full-stack web development. The course duration was one year, during which I gained expertise in a variety of front-end technologies, such as HTML, CSS, JavaScript, and ReactJS, and back-end technologies, such as Node.js and its framework, ExpressJS. Additionally, I learned database languages like MongoDB and SQL, and also enhanced my knowledge of data structures and algorithms. Throughout the course, I participated in various coding contests and completed several projects to reinforce my skills.
                                 </p>
                             </div>
                         </div>
@@ -299,7 +303,7 @@
                                     <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate vitae 
                                     voluptatem deleniti, 
                                     laboriosam odio nobis quae fugit facilis quo. -->
-                                    Robotics and mechatronics
+                                   I joined Sage University in 2020 to pursue my M.Tech in Robotics and Mechatronics. However, due to unforeseen circumstances, I had to drop out of the program.
                                 </p>
                             </div>
                         </div>
