--- a/index.html
+++ b/index.html
@@ -179,11 +179,25 @@
                         just one field. In the era of fourth industrial revolution everything is
                         getting degitalized and automated here so it is also very important for
                         us to have knowledge of advance technologies..  -->
-                         My name is Harish Mahor, and I am a multi-talented professional with diverse experience in Polycarbonate Sheet Plant as a Mechanical engineer.
+                     <!--    My name is Harish Mahor, and I am a multi-talented professional with diverse experience in Polycarbonate Sheet Plant as a Mechanical engineer.
 As a 2 years experienced mechanical engineer, I have worked on a range of challenging projects in Polycarbonate sheet plant related to Sheet dimensions and profiles. I have a strong background in Blow Molding ,Plastic Extrusion ,Injection Moulding ,AutoCAD ,Solid Works ,Management ,MS Excel which have enabled me to design, analyze, and implement innovative solutions to complex engineering problems. I have also worked in a polycarbonate sheet plant as a mechanical engineer, where I was responsible for Production ,maintenance and Material Management.
 Recently, I have completed Training in Full-stack web development and in Data analysis. I am excited to leverage my skills and creativity in these fields. I am well-versed in Html,CSS ,Bootstrape ,Javascript ,react JS,nodejs ,Express JS ,Mongodb ,Sql ,Data Structure and Algorithms in JAVA ,adobe Photoshop ,Adobe XD,Adobe illustrator,Power BI ,Tableau,Advance Excel,Data analysis thorough python using NumPy panda matplotlib,seaborn and have worked on Portfolio website,Responsive Resume,Flipkart clone,Mern stack pizza delivery app which have given me hands-on experience in developing and deploying web applications and analyzing data.
 Apart from my professional work, I am also an aspirant of UPSC (Union Public Service Commission) and working hard to crack it. I believe in continuous learning and personal development, which has led me to pursue diverse interests and excel in different fields.
-I am passionate about using my skills and expertise to make a positive impact in the world. I am excited to connect with other professionals and potential collaborators through LinkedIn. Please feel free to reach out if you would like to discuss a project, job opportunity, or anything related to our shared interests. Thank you for visiting my profile!
+I am passionate about using my skills and expertise to make a positive impact in the world. I am excited to connect with other professionals and potential collaborators through LinkedIn. Please feel free to reach out if you would like to discuss a project, job opportunity, or anything related to our shared interests. Thank you for visiting my profile!  -->
+                        "Hi, I'm Harish Mahor – a mechanical engineer, full-stack developer, and UPSC aspirant based in Jammu. My passion for exploring new places and staying up-to-date with daily current affairs is fueled by my desire to make a positive impact on the world around me.
+
+When it comes to food, I can't resist a plate of delicious dal bati and chicken curry. As an engineer, I've gained valuable experience working in the plastic and pesticides industries, honing my problem-solving skills and developing a keen eye for detail.
+
+In addition to my professional pursuits, I also stay active and focused by practicing my favorite sport, boxing. And as I pursue my M.Tech degree from TIT Science in Bhopal, I'm eager to take on new challenges and push myself to new heights.
+
+If you're looking for a driven and versatile team player who can bring a fresh perspective to your organization, I'd love to hear from you. Let's connect and see how we can work together to achieve great things!"
+
+
+
+
+
+
+
                     </p>
                 </section>
 
@@ -200,6 +214,7 @@ I am passionate about using my skills and expertise to make a positive impact in
                             <div class="tl-content">
                                 <h5 class="tl-title-2"> Mechanical engineer</h5>
                                 <p class="para">
+                                   <!-- I worked as a Production Engineer, and my primary responsibilities were to manage and supervise labor, ensure smooth production operations, and perform maintenance tasks such as changing calender rolls, dies, and analyzing mechanical faults to correct them.-->
                                     I worked as a Production Engineer, and my primary responsibilities were to manage and supervise labor, ensure smooth production operations, and perform maintenance tasks such as changing calender rolls, dies, and analyzing mechanical faults to correct them.
                                 </p>
                             </div>
@@ -215,7 +230,8 @@ I am passionate about using my skills and expertise to make a positive impact in
                                 <h5 class="tl-title-2">production trainee</h5>
                                 <p class="para">
                                
-I have gained knowledge about pesticides and various formulation processes, including the chemicals used in pesticide formulation and different methods of producing pesticides, such as suspension concentration, liquid, powder, WDG, etc.
+<!--I have gained knowledge about pesticides and various formulation processes, including the chemicals used in pesticide formulation and different methods of producing pesticides, such as suspension concentration, liquid, powder, WDG, etc.  -->
+                                    I have gained knowledge about pesticides and various formulation processes, including the chemicals used in pesticide formulation and different methods of producing pesticides, such as suspension concentration, liquid, powder, WDG, etc.
                                 </p>
                             </div>
                         </div>
@@ -267,7 +283,8 @@ I have gained knowledge about pesticides and various formulation processes, incl
                             <div class="tl-content">
                                 <h5 class="tl-title-2">Master of technology</h5>
                                  <p class="para">
-                                   Currently, I am pursuing my M.Tech in Heat Power and Thermal Engineering from TIT Science, Bhopal. I am in the final semester and working on my thesis to complete my M.Tech degree.
+                                  <!-- Currently, I am pursuing my M.Tech in Heat Power and Thermal Engineering from TIT Science, Bhopal. I am in the final semester and working on my thesis to complete my M.Tech degree.  -->
+                                     Currently, I am pursuing my M.Tech in Heat Power and Thermal Engineering from TIT Science, Bhopal. I am in the final semester and working on my thesis to complete my M.Tech degree.
                                 </p> 
                                 Heat Power and Thermal
                             </div>
@@ -285,7 +302,8 @@ I have gained knowledge about pesticides and various formulation processes, incl
                                     <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias cupiditate vitae 
                                     voluptatem deleniti, 
                                     laboriosam odio nobis quae fugit facilis quo. -->
-                               I enrolled in Newton School, an online coding school, in March 2022 to learn full-stack web development. The course duration was one year, during which I gained expertise in a variety of front-end technologies, such as HTML, CSS, JavaScript, and ReactJS, and back-end technologies, such as Node.js and its framework, ExpressJS. Additionally, I learned database languages like MongoDB and SQL, and also enhanced my knowledge of data structures and algorithms. Throughout the course, I participated in various coding contests and completed several projects to reinforce my skills.
+                             <!--  I enrolled in Newton School, an online coding school, in March 2022 to learn full-stack web development. The course duration was one year, during which I gained expertise in a variety of front-end technologies, such as HTML, CSS, JavaScript, and ReactJS, and back-end technologies, such as Node.js and its framework, ExpressJS. Additionally, I learned database languages like MongoDB and SQL, and also enhanced my knowledge of data structures and algorithms. Throughout the course, I participated in various coding contests and completed several projects to reinforce my skills.  -->
+                                    I enrolled in Newton School, an online coding school, in March 2022 to learn full-stack web development. The course duration was one year, during which I gained expertise in a variety of front-end technologies, such as HTML, CSS, JavaScript, and ReactJS, and back-end technologies, such as Node.js and its framework, ExpressJS. Additionally, I learned database languages like MongoDB and SQL, and also enhanced my knowledge of data structures and algorithms. Throughout the course, I participated in various coding contests and completed several projects to reinforce my skills.
                                 </p>
                             </div>
                         </div>
