--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <img src="./avatar.jpg" alt="image">
                     </div>
                     <h2 class="name">Harish Mahor</h2>
-                    <p class="career">Full Stack Web developer</p>
+                    <p class="career">Web developer |Data analyst|Mechanical Engineer</p>
                 </div>
                 <div class="contact-info">
                     <h3 class="main-title">Contact Info</h3>
@@ -55,69 +55,81 @@
                     <h3 class="main-title">Skills</h3>
                     <ul>
                         <li>
-                            <p class="skill-title">Javascript</p>
+                            <p class="skill-title">HTML-CSS</p>
                             <div class="progress-bar">
                                 <div class="progress js-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Photoshop</p>
+                            <p class="skill-title">JAVASCRIPT </p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Java</p>
+                            <p class="skill-title">React JS</p>
                             <div class="progress-bar">
                                 <div class="progress j-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">html/css</p>
+                            <p class="skill-title">Node Js/css</p>
                             <div class="progress-bar">
                                 <div class="progress c-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">ms excel</p>
+                            <p class="skill-title">Sql</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Node js</p>
+                            <p class="skill-title">Python(numpy-panda-matplotlib)</p>
                             <div class="progress-bar">
                                 <div class="progress n-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">react js</p>
+                            <p class="skill-title">MS Office (Advance Excel)</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">illustrator</p>
+                            <p class="skill-title">Power BI-Tabalue</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">figma</p>
+                            <p class="skill-title">Figma-Adobe XD-Canvas </p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
-                        <li><p class="skill-title">Mongo db</p>
+                        <li><p class="skill-title">Adobe PS-Adobe Illustrator</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </li>
                                 <li>
-                                    <p class="skill-title">Mysql</p>
+                                    <p class="skill-title">Tally Prime</p>
                                     <div class="progress-bar">
                                         <div class="progress ps-progress"></div>
                                     </li>
-                      
+                          <li>
+                            <p class="skill-title">Filmora</p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </div>
+                               </li>
+                        <li>
+                            <p class="skill-title">R language</p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </div>
+                               </li>
+                           
                     </ul>
                 </div>
                 <!-- <div class="references-section">
