--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <img src="./avatar.jpg" alt="image">
                     </div>
                     <h2 class="name">Harish Mahor</h2>
-                    <p class="career">Web developer |Data analyst|Mechanical Engineer</p>
+                    <p class="career">Web developer & Data Analyst </p>
                 </div>
                 <div class="contact-info">
                     <h3 class="main-title">Contact Info</h3>
@@ -85,13 +85,13 @@
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Python(numpy-panda-matplotlib)</p>
+                            <p class="skill-title">Python(nm-pd-matplot)</p>
                             <div class="progress-bar">
                                 <div class="progress n-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">MS Office (Advance Excel)</p>
+                            <p class="skill-title">MS Office</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
@@ -103,12 +103,12 @@
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Figma-Adobe XD-Canvas </p>
+                            <p class="skill-title">Figma-Canvas </p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
-                        <li><p class="skill-title">Adobe PS-Adobe Illustrator</p>
+                        <li><p class="skill-title">Adobe PS-Illustrator</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </li>
@@ -129,7 +129,18 @@
                                 <div class="progress ps-progress"></div>
                             </div>
                                </li>
-                           
+                              <li>
+                            <p class="skill-title">Adobe XD</p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </div>
+                               </li>
+                           <li>
+                            <p class="skill-title">Advance Excel (Dashboards)</p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </div>
+                               </li>
                     </ul>
                 </div>
                 <!-- <div class="references-section">
