--- a/index.html
+++ b/index.html
@@ -97,18 +97,34 @@
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Power BI-Tabalue</p>
+                            <p class="skill-title">Power BI</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
                         <li>
-                            <p class="skill-title">Figma-Canvas </p>
+                            <p class="skill-title">Tabalue</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
                         </li>
-                        <li><p class="skill-title">Adobe PS-Illustrator</p>
+                        <li>
+                            <p class="skill-title">Figma </p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <p class="skill-title">Canvas </p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </div>
+                        </li>
+                        <li><p class="skill-title">Adobe PS</p>
+                            <div class="progress-bar">
+                                <div class="progress ps-progress"></div>
+                            </li>
+                        <li><p class="skill-title">Adobe ai</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </li>
@@ -136,7 +152,7 @@
                             </div>
                                </li>
                            <li>
-                            <p class="skill-title">Advance Excel (Dashboards)</p>
+                            <p class="skill-title">Excel (Dashboards)</p>
                             <div class="progress-bar">
                                 <div class="progress ps-progress"></div>
                             </div>
